--- a/src/Pottmayer.MTV.Application/appsettings.json
+++ b/src/Pottmayer.MTV.Application/appsettings.json
@@ -6,19 +6,21 @@
     }
   },
   "AllowedHosts": "*",
-  "Tars": {
-    "Application": {
-      "AppName": "Pottmayer MTV",
-      "DataConfig": {
-        "ProviderType": 3,
-        "ConnectionString": "Host=localhost;Port=5431;Username=postgres;Password=admin;Database=postgres"
-      }
-    },
-    "Auth": {
-      "SigningKey": "a6bce4e04acde4b56eab1cf13b6724c7",
-      "Issuer": "Pottmayer-MTV-Api",
-      "Audience": "Pottmayer-MTV-Client",
-      "Expiration": 3600
-    }
-  }
+  "DataAdapter": {
+    "DbProviderType": 3,
+    "ConnectionString": "Host=localhost;Port=5431;Username=postgres;Password=admin;Database=mtv_dev"
+  },
+  "AuthorizationAdapter": {
+    "SigningKey": "a6bce4e04acde4b56eab1cf13b6724c7",
+    "Issuer": "Pottmayer-MTV-Api",
+    "Audience": "Pottmayer-MTV-Client",
+    "Expiration": 3600
+  },
+  "MemoryCacheAdapter": {
+    "KeyPrefix": "mtv-authorization-service",
+    "Expiration": 60
+  },
+  "RestAdapter": {},
+  "UserProviderAdapter": {},
+  "Core": {}
 }
