--- a/src/Pottmayer.MTV.Adapter.Data/Pottmayer.MTV.Adapter.Data.csproj
+++ b/src/Pottmayer.MTV.Adapter.Data/Pottmayer.MTV.Adapter.Data.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MySqlConnector" Version="2.4.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
     <PackageReference Include="Tars.Adapter.Data" Version="1.0.0" />
+    <PackageReference Include="Tars.Contracts" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
